syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "BlockchainService.Client";

package deposits;

service Deposits {
    rpc SubscribeForNewDeposits(SubscribeForNewDepositsRequest) returns (stream DepositDto);
}

message SubscribeForNewDepositsRequest {
}

message DepositDto {
    int64 id = 1;
    int32 user_id = 2;
    string account_number = 3;
    string currency = 4;
    double amount = 5;
    string source_crypto_address = 6;
    string tx_id = 7;
    google.protobuf.Timestamp created_at = 8;
}
